Revert "removed unnecessary dependencies"
This reverts commit 7cbebcd0b4c63ed8737641b021b1694258be8803.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-icon-builder": "^2.0.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1"
   },
   "build": {
     "appId": "com.neilyxin.weread",
